# GCALC

./: .replit  CMakeLists.txt  README.md  replit.nix
java/: CalcRegex.java
src/: SDL_ttf.h  ctre-consts.hpp  ctreextra.hpp  drawable.h  graphics.cpp  graphics.h  java.cpp  java.h  main.cpp  rgb.h
src/draw/: drawableFunction.cpp  drawableFunction.h  line.cpp  line.h  text.cpp  text.h
src/equation/: equation.cpp  equation.h
src/equation/function/: function.h
src/function/: function.cpp  function.h  term.cpp  term.h
src/textbox/: textinput.h
